[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentset-gradio-demo"
version = "0.1.0"
description = "A Gradio app for document ingestion and Q&A using Agentset and OpenAI"
readme = "readme.md"
requires-python = ">=3.9"
dependencies = [
    "gradio>=4.0.0",
    "openai>=1.0.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "agentset>=0.6.4",
]

[project.urls]
Homepage = "https://github.com/Enes830/testagentset"
Repository = "https://github.com/Enes830/testagentset"

[project.scripts]
agentset-gradio-demo = "agentset_gradio_demo.cli:main"
